k8s/ratings-service/ratings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-dev-ratings
  namespace: bookinfo-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookinfo-dev-ratings
  template:
    metadata:
      labels:
        app: bookinfo-dev-ratings
    spec:
      containers:
      - name: bookinfo-dev-ratings
        image: registry.devops.ntplc.co.th/workshop-[X]/bookinfo/ratings:dev
        imagePullPolicy: Always
      imagePullSecrets:
      - name: registry-bookinfo
